# rust-clip-stash

./: Cargo.toml  README.md
migrations/: 20210624130929_initial.sql  20240705111340_api_key.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: maintenance.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires_at.rs  hits.rs  mod.rs  password.rs  posted_at.rs  short_code.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  ctx.rs  form.rs  hit_counter.rs  http.rs  mod.rs  renderer.rs
templates/: clip.hbs  clip_need_password.hbs  home.hbs
