[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
handlebars = { version = "5.1.2", features = ["dir_source"] }
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
